chore: configurado git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ detalhes_shein.xlsx
 detalhes_spu.xlsx
 Tabela de Preco Master.xlsx
 Tabela de Preco Master Shein.xlsx
+log_atualizacao_precos_*.txt
+*.rar
